--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -141,6 +141,9 @@
                 margin-left: 20px;
                 .seca{
                     width: 30%;
+                    &:hover{
+                        width: 30%;
+                    }
                 }
                 .container-fluid{
                     text-align: center;
@@ -185,7 +188,9 @@
             }
         }
         #menuopciones{
-            @include positiongrid(1,2,1,3);
+            width: 63%;
+            height: auto;
+            @include positiongrid(1,2,1,2);
             background-color: rgba(22, 196, 88, 0);
             .label{
                 text-align: center;
