--- a/scss/_shoppingcart.scss
+++ b/scss/_shoppingcart.scss
@@ -143,9 +143,10 @@
                         border: none;
                         border-radius: 4px;
                         cursor: pointer;
-                        width: 40%;
+                        width: 50%;
+                        height: auto;
                         &:hover{
-                            width: 50%;
+                            width: 60%;
                             height: 3.5rem;
                             font-size: large;
                             background-color: darkgreen;
