--- a/scss/main.css
+++ b/scss/main.css
@@ -967,10 +967,11 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 40%;
+  width: 50%;
+  height: auto;
 }
 #containershoppingcart #containershopcart #summaryshop .summary .btnstartpayment button:hover {
-  width: 50%;
+  width: 60%;
   height: 3.5rem;
   font-size: large;
   background-color: darkgreen;
